# ai-session-browser

./: .gitignore  LICENSE  README.md  app.html  mise.toml  pyproject.toml  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  engineering_task.yml  feature_request.yml  regression.yml
.github/PULL_REQUEST_TEMPLATE/: lite.md
commands/: browse-sessions.md
docs/specs/: 2026-06-15-session-collections-design.md
skills/session-browser/: SKILL.md
tests/: test_core.py
